--- a/views/index.html
+++ b/views/index.html
@@ -53,7 +53,7 @@
 
 			// Sunucudan gelen tweetleri container alanımızda listeliyoruz ( Anlık Olarak )
 			socket.on('tweet', function(msg){
-				$('.container').prepend($('<div class="well">').text(msg)).hide().fadeIn(1000);
+				var div = $('.container').prepend($('<div class="well">').text(msg));
 			});
 
 			$('#tweet_yayinla').click(function() {
